added a header to the index.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         </div>
     </nav>
 
+    <header>
+        <h1>Welcome to "transit app name"</h1>
+    </header>
+
     <!----------------------------------------------->
     <!-- JS: Boostrap, Firebase, API related    -->
     <!----------------------------------------------->
@@ -60,4 +64,5 @@
     <!--------------------------------------------------------------------->
 
 </body>
+
 </html>
