--- a/login.html
+++ b/login.html
@@ -2,37 +2,24 @@
 <html>
 
 <head>
-	<title>BusDating</title>
+	<title>BusDating - Login</title>
 	<meta charset="utf-8">
 	<meta name="description" content="bus dating">
 	<meta name="author" content="dimuzone, semibran, zzzbnbzzz">
 	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1"/>
+
+	<!-- Firebase imports -->
+	<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-firestore.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
+	<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css" />
+
+	<script defer src="./scripts/login.js"></script>
 </head>
 
 <body>
-	<header>
-		<h1>Welcome to "transit app name"</h1>
-	</header>
-		<!-- The core Firebase JS SDK is always required and must be listed first -->
-		<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
-
-		<!-- TODO: Add SDKs for Firebase products that you want to use
-			 https://firebase.google.com/docs/web/setup#available-libraries -->
-
-		<script>
-			// Your web app's Firebase configuration
-			var firebaseConfig = {
-				apiKey: "AIzaSyBYV23zeovHmzX26j9H9HYyI9kBlAzZcvg",
-				authDomain: "bus-dating.firebaseapp.com",
-				databaseURL: "https://bus-dating.firebaseio.com",
-				projectId: "bus-dating",
-				storageBucket: "bus-dating.appspot.com",
-				messagingSenderId: "1012927739228",
-				appId: "1:1012927739228:web:ce582ea70ee1c0f25b7d99"
-			};
-			// Initialize Firebase
-			firebase.initializeApp(firebaseConfig);
-		</script>
+	<main></main>
 </body>
 
 </html>
