--- a/chat.html
+++ b/chat.html
@@ -13,11 +13,16 @@
 </head>
 
 <body>
-	<header class="header">
-		<span class="header-icon material-icons">keyboard_backspace</span>
-		Hello
-		<span class="header-icon material-icons">favorite_border</span>
+	<header class="bar -header">
+		<span class="bar-icon material-icons">keyboard_backspace</span>
+		Header
+		<span class="bar-icon material-icons">favorite_border</span>
 	</header>
+	<footer class="bar -footer">
+		<span class="bar-icon material-icons">home</span>
+		<span class="bar-icon material-icons">mode_comment</span>
+		<span class="bar-icon material-icons">info</span>
+	</footer>
 </body>
 
 </html>
