--- a/chat.html
+++ b/chat.html
@@ -6,22 +6,23 @@
 	<meta charset="utf-8">
 	<meta name="description" content="bus dating">
 	<meta name="author" content="dimuzone, semibran, zzzbnbzzz">
-	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1"/>
+	<meta name="viewport" content="width=device-width,initial-scale=1"/>
 	<link href="styles/bus-dating.css" rel="stylesheet"/>
 	<link href="styles/chat.css" rel="stylesheet"/>
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
 </head>
 
 <body>
 	<header class="bar -header">
-		<span class="bar-icon material-icons">keyboard_backspace</span>
+		<span class="bar-icon material-icons-outlined">keyboard_backspace</span>
 		Header
-		<span class="bar-icon material-icons">favorite_border</span>
+		<span class="bar-icon material-icons-outlined">favorite_border</span>
 	</header>
 	<footer class="bar -footer">
-		<span class="bar-icon material-icons">home</span>
-		<span class="bar-icon material-icons">mode_comment</span>
-		<span class="bar-icon material-icons">info</span>
+		<span class="bar-icon material-icons-outlined">home</span>
+		<span class="bar-icon material-icons-outlined">mode_comment</span>
+		<span class="bar-icon material-icons-outlined">info</span>
 	</footer>
 </body>
 
