normalize structure and indentation, ignore .DS_Store

--- a/bus-profile.html
+++ b/bus-profile.html
@@ -2,13 +2,13 @@
 <html lang="en" dir="ltr">
 
 <head>
-	<title>BusDating - Chat</title>
+	<title>BusDating - Bus Profile</title>
 	<meta charset="utf-8">
 	<meta name="description" content="bus dating">
 	<meta name="author" content="dimuzone, semibran, zzzbnbzzz">
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<link href="styles/bus-dating.css" rel="stylesheet" />
-	<link href="styles/chat.css" rel="stylesheet" />
+	<link href="styles/bus-profile.css" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet" />
 </head>
@@ -16,7 +16,7 @@
 <body>
 	<header class="bar -header">
 		<span class="bar-icon material-icons-outlined">keyboard_backspace</span>
-		Chat
+		Bus Profile
 		<span class="bar-icon material-icons-outlined">favorite_border</span>
 	</header>
 	<footer class="bar -footer">
