edit busprofile: edit header and footer

--- a/busprofile.html
+++ b/busprofile.html
@@ -9,6 +9,8 @@
     <meta name="author" content="dimuzone, semibran, zzzbnbzzz">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet" />
+  	<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet" />
     <link href="styles/bus-dating.css" rel="stylesheet" />
     <link href="styles/busprofile.css" rel="stylesheet" />
 </head>
@@ -16,8 +18,8 @@
 <body>
     <div class="pagewrap">
         <header class="bar -header">
-            <span class="bar-icon material-icons">keyboard_backspace</span> 49(UBC）
-            <span class="bar-icon material-icons">favorite_border</span>
+            <span class="bar-icon material-icons-outlined">keyboard_backspace</span> 49(UBC）
+            <span class="bar-icon material-icons-outlined">favorite_border</span>
         </header>
 
         <div class="map"><a>MAP</a></div>
@@ -83,9 +85,9 @@
     </div>
 
     <footer class="bar -footer">
-        <span class="bar-icon material-icons">home</span>
-        <span class="bar-icon material-icons">mode_comment</span>
-        <span class="bar-icon material-icons">info</span>
+        <span class="bar-icon material-icons-outlined">home</span>
+        <span class="bar-icon material-icons-outlined">mode_comment</span>
+        <span class="bar-icon material-icons-outlined">info</span>
     </footer>
 </body>
 
