started the index.html

--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
 	<meta charset="utf-8">
 	<meta name="description" content="bus dating">
 	<meta name="author" content="dimuzone, semibran, zzzbnbzzz">
-	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1"/>
+	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
+	<link href="styles/bus-dating.css" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet" />
+
+
 </head>
 
 <body>
-	<header>
-		<h1>Welcome to "transit app name"</h1>
-	</header>
+	<div>
+		<header class="bar -header">
+			<span class="bar-icon"></span>
+			Home
+			<span class="bar-icon material-icons-outlined">settings</span>
+		</header>
+	</div>
+
 </body>
 
 </html>
