use filled icons for chat page

--- a/chat.html
+++ b/chat.html
@@ -10,19 +10,19 @@
 	<link href="styles/bus-dating.css" rel="stylesheet" />
 	<link href="styles/chat.css" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet" />
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
 
 <body>
 	<header class="bar -header">
-		<span class="bar-icon material-icons-outlined">keyboard_backspace</span>
+		<span class="bar-icon material-icons">keyboard_backspace</span>
 		Chat
-		<span class="bar-icon material-icons-outlined">favorite_border</span>
+		<span class="bar-icon material-icons">favorite_border</span>
 	</header>
 	<footer class="bar -footer">
-		<span class="bar-icon material-icons-outlined">home</span>
-		<span class="bar-icon material-icons-outlined">mode_comment</span>
-		<span class="bar-icon material-icons-outlined">info</span>
+		<span class="bar-icon material-icons">home</span>
+		<span class="bar-icon material-icons">mode_comment</span>
+		<span class="bar-icon material-icons">info</span>
 	</footer>
 </body>
 
