first pass on chat message bar

--- a/chat.html
+++ b/chat.html
@@ -19,10 +19,16 @@
 		Chat
 		<span class="bar-icon material-icons">favorite_border</span>
 	</header>
+	<main class="page -chat">
+		<div class="message-bar">
+			<input class="message-input" placeholder="Enter a message..." />
+			<button class="message-send material-icons">arrow_upward</button>
+		</div>
+	</main>
 	<footer class="bar -footer">
 		<span class="bar-icon material-icons">home</span>
-		<span class="bar-icon material-icons">mode_comment</span>
-		<span class="bar-icon material-icons">info</span>
+		<span class="bar-icon material-icons -disabled">mode_comment</span>
+		<span class="bar-icon material-icons -disabled">report</span>
 	</footer>
 </body>
 
