move map styles into global map placeholder

--- a/busprofile.html
+++ b/busprofile.html
@@ -22,7 +22,7 @@
             <span class="bar-icon material-icons-outlined">favorite_border</span>
         </header>
 
-        <div class="map">MAP</div>
+        <div class="map">Map</div>
 
         <div class="report">
             <div class="seat">
