--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<meta name="author" content="dimuzone, semibran, zzzbnbzzz">
 	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
 	<link href="styles/bus-dating.css" rel="stylesheet" />
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet" />
+	<link href="styles/index.css" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
 
 </head>
@@ -18,8 +19,42 @@
 		<header class="bar -header">
 			<span class="bar-icon"></span>
 			Home
-			<span class="bar-icon material-icons-outlined">settings</span>
+			<span class="bar-icon material-icons">settings</span>
 		</header>
+	</div>
+
+
+
+	<div class="map">
+
+		<div class="search-bar">
+			<span class="search-bar-icon material-icons">search</span>
+			<p class="search-bar-text">Search Locations</p>
+		</div>
+		<div class="map-Map">Map</div>
+<!--after the map-->
+	</div>
+	<div class="underMap">
+		<div class="undermap-nearby">
+			<span class="material-icons">location_on</span>
+			<p>Nearby</p>
+
+		</div>
+		<div class="undermap-favorites">
+			<span class="material-icons">favorite_border</span>
+			<p>Favorites</p>
+		</div>
+	</div>
+
+
+
+
+	<div>
+		<footer class="bar -footer">
+			<span class="bar-icon material-icons">home</span>
+			<span class="bar-icon material-icons">mode_comment</span>
+			<span class="bar-icon material-icons">info</span>
+		</footer>
 	</div>
 
 </body>
