--- a/chat.html
+++ b/chat.html
@@ -11,6 +11,8 @@
 	<link href="styles/chat.css" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+	<script defer src="./scripts/h2dom.js"></script>
+	<script defer src="./scripts/chat.js"></script>
 </head>
 
 <body>
@@ -20,6 +22,7 @@
 		<span class="bar-icon material-icons">favorite_border</span>
 	</header>
 	<main class="page -chat">
+		<div class="messages"></div>
 		<div class="message-bar">
 			<input class="message-input" placeholder="Enter a message..." />
 			<button class="message-send material-icons">arrow_upward</button>
