first pass on message styles

--- a/chat.html
+++ b/chat.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<link href="styles/bus-dating.css" rel="stylesheet" />
 	<link href="styles/chat.css" rel="stylesheet" />
-	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 	<script defer src="./scripts/h2dom.js"></script>
 	<script defer src="./scripts/chat.js"></script>
