--- a/chat.html
+++ b/chat.html
@@ -17,7 +17,7 @@
 
 <body>
 	<header class="bar -header">
-		<span class="bar-icon material-icons">keyboard_backspace</span>
+		<a href="./index.html" class="bar-icon material-icons">keyboard_backspace</a>
 		Chat
 		<span class="bar-icon material-icons">favorite_border</span>
 	</header>
