finished up index

--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
 </head>
 
 <body>
+
+	<!--Header-->
 	<div>
+
 		<header class="bar -header">
 			<span class="bar-icon"></span>
 			Home
 			<span class="bar-icon material-icons">settings</span>
 		</header>
+
 	</div>
 
 
-
+<!--Map and search bar-->
 	<div class="map">
 
 		<div class="search-bar">
@@ -32,23 +36,54 @@
 			<p class="search-bar-text">Search Locations</p>
 		</div>
 		<div class="map-Map">Map</div>
-<!--after the map-->
+
 	</div>
+
+	<!--Nearby and favorite Tabs-->
+
 	<div class="underMap">
+
 		<div class="undermap-nearby">
 			<span class="material-icons">location_on</span>
-			<p>Nearby</p>
-
+			Nearby
 		</div>
+
 		<div class="undermap-favorites">
 			<span class="material-icons">favorite_border</span>
-			<p>Favorites</p>
+			Favorites
 		</div>
+
+	</div>
+
+	<!--Nearby stations-->
+	<div class="nearby"> 
+
+		<header class="nearby-header">Nearby Stations</header>
+		<ul class="nearby-list">
+
+			<li  class="nearby-list-item">
+				<span class="nearby-icon material-icons">info</span>
+				Metrotown
+			</li>
+
+			<li  class="nearby-list-item">
+				<span class="nearby-icon material-icons">info</span>
+				Royal Oak
+			</li>
+
+			<li  class="nearby-list-item">
+				<span class="nearby-icon material-icons">info</span>
+				New Westminister
+			</li>
+
+		</ul>
+
+
 	</div>
 
 
 
-
+<!--Footer-->
 	<div>
 		<footer class="bar -footer">
 			<span class="bar-icon material-icons">home</span>
