fixed errors on index

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<span class="search-bar-icon material-icons">search</span>
 			<p class="search-bar-text">Search Locations</p>
 		</div>
-		<div class="map-Map">Map</div>
+		<div>Map</div>
 
 	</div>
 
@@ -59,7 +59,7 @@
 	<div class="nearby"> 
 
 		<header class="nearby-header">Nearby Stations</header>
-		<ul class="nearby-list">
+		<ul>
 
 			<li  class="nearby-list-item">
 				<span class="nearby-icon material-icons">info</span>
@@ -76,7 +76,7 @@
 				New Westminister
 			</li>
 
-		</ul>
+		</div>
 
 
 	</div>
