modify color for report button

--- a/busprofile.html
+++ b/busprofile.html
@@ -26,7 +26,7 @@
 
         <div class="report">
             <div class="seat">
-                <span class="rselect">Seating</span>
+                <span class="rselect rseat">Seating</span>
                 <span class="status">Empty</span>
                 <span class="report-icon material-icons">
           expand_more
@@ -34,7 +34,7 @@
             </div>
 
             <div class="arrival">
-                <span class="rselect">Arrival</span>
+                <span class="rselect rarrival">Arrival</span>
                 <span class="status">Very Late</span>
                 <span class="report-icon material-icons">
           expand_more
