--- a/chat.html
+++ b/chat.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<link href="styles/bus-dating.css" rel="stylesheet" />
 	<link href="styles/chat.css" rel="stylesheet" />
-	<script defer src="./scripts/h2dom.js"></script>
+	<script defer src="./scripts/h2.js"></script>
 	<script defer src="./scripts/chat.js"></script>
 </head>
 
