Finished Search page

--- a/main.html
+++ b/main.html
@@ -2,3 +2,29 @@
     <h1>Hello Bus Dating!!!</h1>
     <h2>This is Ning Ding</h2>
 </html>
+
+<ul>
+
+    <li class="schedule-list">
+        <span class="schedule-line material-icons">timeline</span>
+        <p class="schedule-text">19 Stanley Park</p>
+        <p class="schedule-indicator-text">Arrives in</p>
+        <p>4min</p>
+        <span class="schedule-indicator-good material-icons">fiber_manual_record</span>
+    </li>
+    <li class="schedule-list">
+        <span class="schedule-line material-icons">timeline</span>
+        <p class="schedule-text">110 Loughleed str</p>
+        <p class="schedule-indicator-text">Arrives in</p>
+        <p>4min</p>
+        <span class="schedule-indicator-ok material-icons">fiber_manual_record</span>
+    </li>
+    <li class="schedule-list">
+        <span class="schedule-line material-icons">timeline</span>
+        <p class="schedule-text">49 UBC</p>
+        <p class="schedule-indicator-text">Arrives in</p>
+        <p>4min</p>
+        <span class="schedule-indicator-bad material-icons">fiber_manual_record</span>
+    </li>
+
+</ul>
