--- a/busprofile.html
+++ b/busprofile.html
@@ -8,9 +8,6 @@
     <meta name="description" content="bus dating">
     <meta name="author" content="dimuzone, semibran, zzzbnbzzz">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet" />
-  	<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet" />
     <link href="styles/bus-dating.css" rel="stylesheet" />
     <link href="styles/busprofile.css" rel="stylesheet" />
 </head>
@@ -18,8 +15,8 @@
 <body>
     <div class="pagewrap">
         <header class="bar -header">
-            <span class="bar-icon material-icons-outlined">keyboard_backspace</span> 49(UBC）
-            <span class="bar-icon material-icons-outlined">favorite_border</span>
+            <span class="bar-icon material-icons">keyboard_backspace</span> 49(UBC）
+            <span class="bar-icon material-icons">favorite_border</span>
         </header>
 
         <div class="map">Map</div>
@@ -49,33 +46,33 @@
         <div class="message">
             Recent Message
             <div class="room room1">
-                <span class="roomName">49(UBC)</span>
-                <span class="chat">bborbert is typing</span>
-                <div class="time">
+                <span class="roomName roomName1">49(UBC)</span>
+                <span class="chat chat1">bborbert is typing...</span>
+                <div class="time time1">
                     1m
-                    <span class="message-icon material-icons">
+                    <span class="message-icon message-icon1 material-icons">
             chevron_right
           </span>
                 </div>
             </div>
 
             <div class="room room2">
-                <span class="roomName">49(UBC) #0123</span>
-                <span class="chat">davinky420: any update?</span>
-                <div class="time">
+                <span class="roomName roomName2">49(UBC) #0123</span>
+                <span class="chat chat2">davinky420: any update?</span>
+                <div class="time time2">
                     1d
-                    <span class="message-icon material-icons">
+                    <span class="message-icon message-icon2 material-icons">
             chevron_right
           </span>
                 </div>
             </div>
 
             <div class="room room3">
-                <span class="roomName">49(UBC) #0599</span>
-                <span class="chat">you: hello!</span>
-                <div class="time">
+                <span class="roomName roomName3">49(UBC) #0599</span>
+                <span class="chat chat3">you: hello!</span>
+                <div class="time time3">
                     1h
-                    <span class="message-icon material-icons">
+                    <span class="message-icon message-icon3 material-icons">
             chevron_right
           </span>
                 </div>
@@ -85,9 +82,9 @@
     </div>
 
     <footer class="bar -footer">
-        <span class="bar-icon material-icons-outlined">home</span>
-        <span class="bar-icon material-icons-outlined">mode_comment</span>
-        <span class="bar-icon material-icons-outlined">info</span>
+        <span class="bar-icon material-icons">home</span>
+        <span class="bar-icon material-icons">mode_comment</span>
+        <span class="bar-icon material-icons">info</span>
     </footer>
 </body>
 
