normalized colours, removed material icon link

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
 
 <!--Map and search bar-->
-	<div class="map">
-
+	<div>
+		<div class="map">Map</div>
 		<div class="search-bar">
 			<span class="search-bar-icon material-icons">search</span>
 			<p class="search-bar-text">Search Locations</p>
 		</div>
-		<div>Map</div>
+
 
 	</div>
 
