--- a/chat.html
+++ b/chat.html
@@ -2,8 +2,8 @@
 <html lang="en" dir="ltr">
 
 <head>
-	<title>BusDating - Chat</title>
 	<meta charset="utf-8">
+	<title>BusDating - Chat</title>
 	<meta name="description" content="bus dating">
 	<meta name="author" content="dimuzone, semibran, zzzbnbzzz">
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -19,13 +19,7 @@
 		Chat
 		<span class="bar-icon material-icons">favorite_border</span>
 	</header>
-	<main class="page -chat">
-		<div class="messages-wrap"></div>
-		<div class="message-bar">
-			<input class="message-input" placeholder="Enter a message..." />
-			<button class="message-send material-icons">arrow_upward</button>
-		</div>
-	</main>
+	<main class="page -chat"></main>
 	<footer class="bar -footer">
 		<span class="bar-icon material-icons">home</span>
 		<span class="bar-icon material-icons -disabled">mode_comment</span>
