--- a/report.html
+++ b/report.html
@@ -20,42 +20,46 @@
 
     <div class="report seat">
         <div class="title">SEATING AVAILABILITY</div>
-        <p class="text">Is the bus empty, standing only, or full?</p>
-        <div class="choice">
-            <div class="radio-button">
-                <input type="radio" id="empty" name="drone" value="huey" checked>
-                <label for="empty">Empty</label>
-            </div>
+        <div class="content">
+            <p class="text">Is the bus empty, standing only, or full?</p>
+            <div class="choice">
+                <div class="radio-button">
+                    <input type="radio" id="empty" name="seating" value="huey" checked>
+                    <label for="empty">Empty</label>
+                </div>
 
-            <div class="radio-button">
-                <input type="radio" id="stand" name="drone" value="dewey">
-                <label for="stand">Standing Only</label>
-            </div>
+                <div class="radio-button">
+                    <input type="radio" id="stand" name="seating" value="dewey">
+                    <label for="stand">Standing Only</label>
+                </div>
 
-            <div class="radio-button">
-                <input type="radio" id="full" name="drone" value="louie">
-                <label for="full">Full</label>
+                <div class="radio-button">
+                    <input type="radio" id="full" name="seating" value="louie">
+                    <label for="full">Full</label>
+                </div>
             </div>
         </div>
     </div>
 
     <div class="report tardiness">
         <div class="title">TARDINESS</div>
-        <p class="text">Is the bus on time, late, or very late?</p>
-        <div class="choice">
-            <div class="radio-button">
-                <input type="radio" id="ontime" name="drone" value="huey" checked>
-                <label for="ontime">On time</label>
-            </div>
+        <div class="content">
+            <p class="text">Is the bus on time, late, or very late?</p>
+            <div class="choice">
+                <div class="radio-button">
+                    <input type="radio" id="ontime" name="tardy" value="huey" checked>
+                    <label for="ontime">On time</label>
+                </div>
 
-            <div class="radio-button">
-                <input type="radio" id="late" name="drone" value="dewey">
-                <label for="late">Late</label>
-            </div>
+                <div class="radio-button">
+                    <input type="radio" id="late" name="tardy" value="dewey">
+                    <label for="late">Late</label>
+                </div>
 
-            <div class="radio-button">
-                <input type="radio" id="very-late" name="drone" value="louie">
-                <label for="very-late">Very late</label>
+                <div class="radio-button">
+                    <input type="radio" id="very-late" name="tardy" value="louie">
+                    <label for="very-late">Very late</label>
+                </div>
             </div>
         </div>
 
