setup base for site redesign via report.html

--- a/report.html
+++ b/report.html
@@ -4,76 +4,27 @@
 <head>
     <meta charset="utf-8">
     <title>BusDating - Bus Profile</title>
-    <meta charset="utf-8">
     <meta name="description" content="bus dating">
     <meta name="author" content="dimuzone, semibran, zzzbnbzzz">
-    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link href="styles/bus-dating.css" rel="stylesheet" />
     <link href="styles/report.css" rel="stylesheet" />
 </head>
 
 <body>
-    <header class="bar -header">
-        <span class="bar-icon material-icons">keyboard_backspace</span> 49(UBC）
-        <span class="bar-icon material-icons">favorite_border</span>
-    </header>
-
-    <div class="report seat">
-        <div class="title">SEATING AVAILABILITY</div>
-        <div class="content">
-            <p class="text">Is the bus empty, standing only, or full?</p>
-            <div class="choice">
-                <div class="radio-button">
-                    <input type="radio" id="empty" name="seating" value="huey" checked>
-                    <label for="empty">Empty</label>
-                </div>
-
-                <div class="radio-button">
-                    <input type="radio" id="stand" name="seating" value="dewey">
-                    <label for="stand">Standing Only</label>
-                </div>
-
-                <div class="radio-button">
-                    <input type="radio" id="full" name="seating" value="louie">
-                    <label for="full">Full</label>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="report tardiness">
-        <div class="title">TARDINESS</div>
-        <div class="content">
-            <p class="text">Is the bus on time, late, or very late?</p>
-            <div class="choice">
-                <div class="radio-button">
-                    <input type="radio" id="ontime" name="tardy" value="huey" checked>
-                    <label for="ontime">On time</label>
-                </div>
-
-                <div class="radio-button">
-                    <input type="radio" id="late" name="tardy" value="dewey">
-                    <label for="late">Late</label>
-                </div>
-
-                <div class="radio-button">
-                    <input type="radio" id="very-late" name="tardy" value="louie">
-                    <label for="very-late">Very late</label>
-                </div>
-            </div>
-        </div>
-
-        <div class="submit">Report <span class="report-icon material-icons">
-            chevron_right
-          </span></div>
-    </div>
-
-
-    <footer class="bar -footer">
-        <span class="bar-icon material-icons">home</span>
-        <span class="bar-icon material-icons">mode_comment</span>
-        <span class="bar-icon material-icons">info</span>
-    </footer>
+	<header class="header">
+		<div class="headings">
+			<h1 class="title">Update</h1>
+			<h2 class="subtitle">49W - #52500</h2>
+		</div>
+		<a href="./station.html" class="back">
+			<span class="material-icons">keyboard_arrow_left</span>
+			Metrotown
+		</a>
+	</header>
+	<main class="page -update">
+		<p class="description">Is our info out of date? Let us know if seating on the bus is full or if the bus is running late.</p>
+	</main>
 </body>
 
 </html>
