--- a/report.html
+++ b/report.html
@@ -15,7 +15,7 @@
 	<header class="header">
 		<div class="headings">
 			<h1 class="title">Update</h1>
-			<h2 class="subtitle">49W - #52500</h2>
+			<span class="subtitle">49W - #52500</span>
 		</div>
 		<a href="./station.html" class="back">
 			<span class="material-icons">keyboard_arrow_left</span>
@@ -24,6 +24,26 @@
 	</header>
 	<main class="page -update">
 		<p class="description">Is our info out of date? Let us know if seating on the bus is full or if the bus is running late.</p>
+		<form class="report-form">
+			<fieldset class="report-section seating">
+				<legend><h2 class="report-heading">Seating availability</h2></legend>
+				<input id="empty" type="radio" name="seating" value="empty" checked />
+				<label for="empty" class="card">
+					<span class="card-name">Empty</span>
+					<span class="card-text">Plenty of space for new riders</span>
+				</label>
+				<input id="standonly" type="radio" name="seating" value="standonly" />
+				<label for="standonly" class="card">
+					<span class="card-name">Standing Only</span>
+					<span class="card-text">Few seats available, if any</span>
+				</label>
+				<input id="full" type="radio" name="seating" value="full" />
+				<label for="full" class="card">
+					<span class="card-name">Full</span>
+					<span class="card-text">No seating or standing room</span>
+				</label>
+			</fieldset>
+		</form>
 	</main>
 </body>
 
