report.html colors

--- a/report.html
+++ b/report.html
@@ -28,7 +28,7 @@
 			<fieldset class="report-section seating">
 				<legend><h2 class="report-heading">Seating availability</h2></legend>
 				<input id="empty" type="radio" name="seating" value="empty" checked />
-				<label for="empty" class="card">
+				<label for="empty" class="card -green">
 					<div class="card-text">
 						<span class="card-name">Empty</span>
 						<span class="card-desc">Plenty of space for new riders</span>
@@ -38,7 +38,7 @@
 					</div>
 				</label>
 				<input id="standonly" type="radio" name="seating" value="standonly" />
-				<label for="standonly" class="card">
+				<label for="standonly" class="card -yellow">
 					<div class="card-text">
 						<span class="card-name">Standing Only</span>
 						<span class="card-desc">Few seats available, if any</span>
@@ -48,7 +48,7 @@
 					</div>
 				</label>
 				<input id="full" type="radio" name="seating" value="full" />
-				<label for="full" class="card">
+				<label for="full" class="card -red">
 					<div class="card-text">
 						<span class="card-name">Full</span>
 						<span class="card-desc">No seating or standing room</span>
