make chat bubbles appear again

--- a/chat.html
+++ b/chat.html
@@ -14,17 +14,17 @@
 </head>
 
 <body>
-	<header class="bar -header">
-		<a href="./index.html" class="bar-icon material-icons">keyboard_backspace</a>
-		Chat
-		<span class="bar-icon material-icons">favorite_border</span>
+	<header class="header">
+		<div class="headings">
+			<h1 class="title">Chat</h1>
+			<span class="subtitle">49W - #52500</span>
+		</div>
+		<a href="./station.html" class="back">
+			<span class="material-icons">keyboard_arrow_left</span>
+			Metrotown
+		</a>
 	</header>
 	<main class="page -chat"></main>
-	<footer class="bar -footer">
-		<span class="bar-icon material-icons">home</span>
-		<span class="bar-icon material-icons -disabled">mode_comment</span>
-		<span class="bar-icon material-icons -disabled">report</span>
-	</footer>
 </body>
 
 </html>
