minor fixes for index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<div class="saved-route">
 						<span class="stn-route-number">Route 49E</span>
 						 &middot
-						<span class="stn-number">60195 &middot Bay 11</span>
+						<span>60195 &middot Bay 11</span>
 					</div>
 
 				</div>
@@ -78,7 +78,7 @@
 					<div class="saved-route">
 						<span class="stn-route-number">Route 49W</span>
 						 &middot
-						<span class="stn-number">60358</span>
+						<span>60358</span>
 					</div>
 
 				</div>
