--- a/report.html
+++ b/report.html
@@ -97,6 +97,42 @@
 					</div>
 				</label>
 			</fieldset>
+			<fieldset class="report-section mask-usage">
+				<legend class="report-header">
+					<h2 class="report-heading">Mask usage</h2>
+					<span class="report-prompt">Select one</span>
+				</legend>
+				<input id="complete" type="radio" name="mask-usage" value="complete" checked />
+				<label for="complete" class="card -green">
+					<div class="card-text">
+						<span class="card-name">Complete</span>
+						<span class="card-desc">Most or all people are wearing</span>
+					</div>
+					<div class="card-radio">
+						<span class="material-icons">check</span>
+					</div>
+				</label>
+				<input id="partial" type="radio" name="mask-usage" value="partial" />
+				<label for="partial" class="card -yellow">
+					<div class="card-text">
+						<span class="card-name">Late</span>
+						<span class="card-desc">Some people are wearing</span>
+					</div>
+					<div class="card-radio">
+						<span class="material-icons">check</span>
+					</div>
+				</label>
+				<input id="few" type="radio" name="mask-usage" value="few" />
+				<label for="few" class="card -red">
+					<div class="card-text">
+						<span class="card-name">Few</span>
+						<span class="card-desc">Only a few people are wearing</span>
+					</div>
+					<div class="card-radio">
+						<span class="material-icons">check</span>
+					</div>
+				</label>
+			</fieldset>
 			<button class="button -submit">
 				Submit
 				<span class="material-icons">keyboard_arrow_right</span>
