--- a/busprofile.html
+++ b/busprofile.html
@@ -97,6 +97,8 @@
                 <span class="msg-icon material-icons">keyboard_arrow_right</span>
             </div>
         </div>
+
+        <button class="button">Join chat for Route 49W</button>
     </main>
 
 </body>
