fix mask usage typo

--- a/report.html
+++ b/report.html
@@ -115,7 +115,7 @@
 				<input id="partial" type="radio" name="mask-usage" value="partial" />
 				<label for="partial" class="card -yellow">
 					<div class="card-text">
-						<span class="card-name">Late</span>
+						<span class="card-name">Partial</span>
 						<span class="card-desc">Some people are wearing</span>
 					</div>
 					<div class="card-radio">
