final final changes to index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				</div>
 
 				<div class="search-bar">
-					<span class="material-icons">search</span>
+					<span class="search-icon material-icons">search</span>
 					<input class="search-input" type="text" placeholder="Search routes" name="search"><br><br>
 				</div>
 
@@ -41,15 +41,15 @@
 			</div>
 
 			<div class="tabs">
-				<div class="tab -history">
+				<button class="tab -history">
 					<span class=" history-icons material-icons">schedule</span>
 					<p class="history-text">History</p>
-				</div>
+				</button>
 
-				<div class="tab -saved">
+				<button class="tab -saved">
 					<span class="saved-icons material-icons">star</span>
 					<p class="saved-text">Saved</p>
-				</div>
+				</button>
 			</div>
 
 			<div class="saved-stations">
