--- a/main.html
+++ b/main.html
@@ -1,30 +1,38 @@
-<html>
-    <h1>Hello Bus Dating!!!</h1>
-    <h2>This is Ning Ding</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+<style>
+    @import url(https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap);
+    @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
+
+    .button {
+        background-color: transparent;
+        border: none;
+    }
+
+    .button.-one:focus-within {
+        color: blue;
+        border: none;
+    }
+
+    .button.-two:focus-within {
+        color: blue;
+        border-bottom: blue;
+    }
+</style>
+
+</head>
+<body>
+<div class="button">
+    <button class="button -one">
+        <span class="material-icons">schedule</span>
+        <p>HI</p>
+    </button>
+    <button class="button -two">BYE</button>
+</div>
+</body>
 </html>
-
-<ul>
-
-    <li class="schedule-list">
-        <span class="schedule-line material-icons">timeline</span>
-        <p class="schedule-text">19 Stanley Park</p>
-        <p class="schedule-indicator-text">Arrives in</p>
-        <p>4min</p>
-        <span class="schedule-indicator-good material-icons">fiber_manual_record</span>
-    </li>
-    <li class="schedule-list">
-        <span class="schedule-line material-icons">timeline</span>
-        <p class="schedule-text">110 Loughleed str</p>
-        <p class="schedule-indicator-text">Arrives in</p>
-        <p>4min</p>
-        <span class="schedule-indicator-ok material-icons">fiber_manual_record</span>
-    </li>
-    <li class="schedule-list">
-        <span class="schedule-line material-icons">timeline</span>
-        <p class="schedule-text">49 UBC</p>
-        <p class="schedule-indicator-text">Arrives in</p>
-        <p>4min</p>
-        <span class="schedule-indicator-bad material-icons">fiber_manual_record</span>
-    </li>
-
-</ul>
