almost finish search.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<button class="tab -saved">
 					<span class="saved-icons material-icons">star</span>
 					<p class="saved-text">Saved</p>
-				</button>
+				</div>
 			</div>
 
 			<div class="saved-stations">
