--- a/search.html
+++ b/search.html
@@ -13,101 +13,33 @@
 
 <body>
 
-    <!--Header-->
-    <div>
+    <header class="header">
 
-        <header class="bar -header">
-            <span class="bar-icon material-icons">keyboard_backspace</span>
-            Metrotown
-            <span class="bar-icon material-icons">settings</span>
-        </header>
+            <div class="back-home">
+                <span class="material-icons">chevron_left</span>
+                <p class="home-text">Home</p>
+            </div>
+            <div class="search-text">
+                <p>Search</p>
+            </div>
+            <div class="search-bar">
+                <span class="search-icon material-icons">search</span>
+                <input class="search-input" type="text" placeholder="Search routes" name="search"><br><br>
+            </div>
+
+    </header>
+
+    <main class="page -home">
+
+    <div class="routes">
+        <div class="single-route">
+            <p class="route-number">Route 4W</p>
+            <div class="route-locations">Powell / Downtown / UBC</div>
+        </div>
+        <span class="route-icon material-icons">chevron_right</div>
     </div>
 
-    <!--Search Bar-->
-    <div class="search-bar-background">
-
-        <div class="search-bar-text">
-            <span class="search-bar-icon material-icons">search</span>
-            <p class="search-bar-text">|</p>
-        </div>
-
-    </div>
-
-    <!--Schedules-->
-    <div class="schedules">
-
-        <header class="schedules-main-text">Schedules</header>
-
-        <div class="arrival">
-            <div class="arrival-left-side">
-
-                <span class="schedule-line material-icons">timeline</span>
-
-                <div>
-                    <div>19</div>
-                    <div class="bottom-text">Stanley Park</div>
-                </div>
-            </div>
-
-            <div class="arrival-right-side">
-
-                <div class="arrives-text">
-                    <p class="arrives">Arrives In <span class="time">6min</span></p>
-                </div>
-                <div class="icon good-indicator"></div>
-            </div>
-        </div>
-
-        <div class="arrival">
-            <div class="arrival-left-side">
-
-                <span class="schedule-line material-icons">timeline</span>
-
-                <div>
-                    <div>110</div>
-                    <div class="bottom-text">Lougheed Stn</div>
-                </div>
-            </div>
-
-            <div class="arrival-right-side">
-
-                <div class="arrives-text">
-                    <p class="arrives">Arrives In <span class="time">6min</span></p>
-                </div>
-                <div class="icon ok-indicator"></div>
-            </div>
-        </div>
-
-        <div class="arrival">
-            <div class="arrival-left-side">
-
-                <span class="schedule-line material-icons">timeline</span>
-
-                <div>
-                    <div>49</div>
-                    <div class="bottom-text">UBC</div>
-                </div>
-            </div>
-
-            <div class="arrival-right-side">
-
-                <div class="arrives-text">
-                    <p class="arrives">Arrives In <span class="time">6min</span></p>
-                </div>
-                <div class="icon bad-indicator"></div>
-            </div>
-        </div>
-
-    </div>
-
-    <!--Footer-->
-    <div>
-        <footer class="bar -footer">
-            <span class="bar-icon material-icons">home</span>
-            <span class="bar-icon material-icons">mode_comment</span>
-            <span class="bar-icon material-icons">info</span>
-        </footer>
-    </div>
+    </main>
 
 </body>
 
