fixed header margin

--- a/route.html
+++ b/route.html
@@ -17,11 +17,15 @@
 
     <header class="header">
         <div class="headings">
-            <h1 class="title">Update</h1>
-            <span class="subtitle">49W - #52500</span>
+            <h1 class="title">Route 49W</h1>
+            <span class="subtitle"><span class="material-icons">import_export</span> Metrotown
+            <span class="east-icon material-icons">
+                east
+                </span> UBC
+            </span>
         </div>
         <a href="./station.html" class="back">
-            <span class="material-icons">keyboard_arrow_left</span> Metrotown
+            <span class="material-icons">keyboard_arrow_left</span> Search
         </a>
         <div class="search-bar">
             <span class="search-icon material-icons">search</span>
