header spacing fixes for search page

--- a/chat.html
+++ b/chat.html
@@ -15,14 +15,16 @@
 
 <body>
 	<header class="header">
-		<div class="headings">
-			<h1 class="title">Chat</h1>
-			<span class="subtitle">49W - #52500</span>
+		<div class="header-text">
+			<div class="headings">
+				<h1 class="title">Chat</h1>
+				<span class="subtitle">49W - #52500</span>
+			</div>
+			<a href="./station.html" class="back">
+				<span class="material-icons">keyboard_arrow_left</span>
+				Metrotown
+			</a>
 		</div>
-		<a href="./station.html" class="back">
-			<span class="material-icons">keyboard_arrow_left</span>
-			Metrotown
-		</a>
 	</header>
 	<main class="page -chat"></main>
 </body>
