Added -search to header on route search and index

--- a/route.html
+++ b/route.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <header class="header">
+    <header class="header -search">
         <div class="headings">
             <h1 class="title">Route 49W</h1>
             <span class="subtitle"><span class="material-icons">import_export</span> Metrotown
