--- a/search.html
+++ b/search.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <header class="header">
+    <header class="header -search">
 
             <div class="back-home">
                 <span class="material-icons">chevron_left</span>
