move all styles from search page into main css file

--- a/search.html
+++ b/search.html
@@ -28,15 +28,13 @@
 		</div>
 	</header>
 	<main class="page -search">
-		<div class="routes">
-			<div class="single-route">
-				<p class="route-number">Route 4W</p>
-				<div class="route-locations">Powell / Downtown / UBC</div>
+		<div class="option">
+			<div class="option-data">
+				<p class="option-text">Route 4W</p>
+				<div class="option-subtext">Powell / Downtown / UBC</div>
 			</div>
-			<span class="route-icon material-icons">chevron_right
+			<span class="option-icon material-icons">chevron_right
 		</div>
-		</div>
-
 	</main>
 
 </body>
