--- a/route.html
+++ b/route.html
@@ -16,17 +16,19 @@
 <body>
 
     <header class="header -search">
-        <div class="headings">
-            <h1 class="title">Route 49W</h1>
-            <span class="subtitle"><span class="material-icons">import_export</span> Metrotown
-            <span class="east-icon material-icons">
+        <div class="header-text">
+            <div class="headings">
+                <h1 class="title">Route 49W</h1>
+                <span class="subtitle"><span class="material-icons">import_export</span> Metrotown
+                <span class="east-icon material-icons">
                 east
                 </span> UBC
-            </span>
+                </span>
+            </div>
+            <a href="./station.html" class="back">
+                <span class="material-icons">keyboard_arrow_left</span> Search
+            </a>
         </div>
-        <a href="./station.html" class="back">
-            <span class="material-icons">keyboard_arrow_left</span> Search
-        </a>
         <div class="search-bar">
             <span class="search-icon material-icons">search</span>
             <input class="search-input" type="text" placeholder="Search routes" name="search"><br><br>
