--- a/search.html
+++ b/search.html
@@ -2,38 +2,37 @@
 <html>
 
 <head>
-	<title>BusDating</title>
-	<meta charset="utf-8">
-	<meta name="description" content="bus dating">
-	<meta name="author" content="dimuzone, semibran, zzzbnbzzz">
-	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
-	<link href="styles/bus-dating.css" rel="stylesheet" />
-	<link href="styles/search.css" rel="stylesheet" />
+    <title>BusDating</title>
+    <meta charset="utf-8">
+    <meta name="description" content="bus dating">
+    <meta name="author" content="dimuzone, semibran, zzzbnbzzz">
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
+    <link href="styles/bus-dating.css" rel="stylesheet" />
+    <link href="styles/search.css" rel="stylesheet" />
 </head>
 
 <body>
-	<header class="header -search">
-		<div class="header-text">
-			<div class="headings">
-				<h1 class="title">Search</h1>
-			</div>
-			<a href="./home.html" class="back">
-				<span class="material-icons">keyboard_arrow_left</span>
-				Metrotown
-			</a>
-		</div>
-		<div class="search-bar">
-			<span class="search-icon material-icons">search</span>
-			<input class="search-input" type="text" placeholder="Search routes" name="search">
-		</div>
-	</header>
-	<main class="page -search">
-		<div class="option">
-			<div class="option-data">
-				<p class="option-text">Route 4W</p>
-				<div class="option-subtext">Powell / Downtown / UBC</div>
-			</div>
-			<span class="option-icon material-icons">chevron_right
+    <header class="header -search">
+        <div class="header-text">
+            <div class="headings">
+                <h1 class="title">Search</h1>
+            </div>
+            <a href="./home.html" class="back">
+                <span class="material-icons">keyboard_arrow_left</span> Metrotown
+            </a>
+        </div>
+        <div class="search-bar">
+            <span class="search-icon material-icons">search</span>
+            <input class="search-input" type="text" placeholder="Search routes" name="search">
+        </div>
+    </header>
+    <main class="page -search">
+        <div class="option">
+            <div class="option-data">
+                <p class="option-text">Route 4W</p>
+                <div class="option-subtext">Powell / Downtown / UBC</div>
+            </div>
+            <span class="option-icon material-icons">chevron_right
 		</div>
 	</main>
 
